--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/pressure_pal_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/pressure_pal_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pressure_Sensor"
         tools:targetApi="31">
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name=".SymptomDetailActivity" />
         <activity android:name=".ZoneDetailActivity" />
+        <activity android:name=".DoctorViewActivity" />
     </application>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
